--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "babel-node src/server.js",
     "start:dev": "nodemon --exec babel-node src/server.js",
     "lint": "eslint --ignore-path .gitignore ./src",
-    "test": "cross-env NODE_NO_WARNINGS=1 take-home-integration-test features --no-color --check-new --command 'npm start' --port 8000 --out-file integration-test.log -- --tags 'not @skip'"
+    "test": "cross-env NODE_NO_WARNINGS=1 take-home-integration-test features --no-color --check-new --command 'npm start' --port 8000 --out-file integration-test.log -- --tags 'not @skip'",
+    "test:unit": "jest --watch",
+    "test:coverage": "jest --coverage ./src/**/*.js"
   },
   "engines": {
     "node": ">=8.0"
@@ -32,5 +34,12 @@
     "body-parser": "^1.18.2",
     "express": "^4.15.3",
     "lodash": "^4.17.15"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/measurements/measurement-store.js",
+      "src/statistics/measurement-aggregator.js",
+      "src/common/utils.js"
+    ]
   }
 }
