--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.15.3",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "winston": "^3.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
